Refactor: Unifies the scale of elements on hover with a sass variable.

--- a/src/styles/headshots.module.scss
+++ b/src/styles/headshots.module.scss
@@ -35,8 +35,14 @@
   object-fit: scale-down;
   border-radius: Theme.$Headshots_SmRadius;
   cursor: pointer;
-  @include Mixins.scaleOnHover() {
-    // additional rules?
+  transition-property: scale, box-shadow;
+  transition-duration: #{Theme.$transitionShort}s;
+  &:hover {
+    scale: Theme.$scaleOnHover;
+  }
+  &:active {
+    transform: scale(0.95);
+    box-shadow: none;
   }
   @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
     width: Theme.$Headshots_Sm;
@@ -45,6 +51,12 @@
   @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
     width: 100%;
     height: auto;
+    &:hover {
+      scale: 1;
+    }
+    &:active {
+      scale: 0.95;
+    }
   }
 }
 
@@ -52,20 +64,12 @@
   outline: Theme.$momOutline;
   outline-offset: -1px;
   @include Mixins.setBoxShadow(Theme.$darkMom);
-  &:active {
-    transform: scale(0.95);
-    box-shadow: none;
-  }
 }
 
 .dad {
   outline: Theme.$dadOutline;
   outline-offset: -1px;
   @include Mixins.setBoxShadow(Theme.$darkDad);
-  &:active {
-    transform: scale(0.95);
-    box-shadow: none;
-  }
 }
 
 .unrecordedDog {
@@ -81,4 +85,3 @@
     box-shadow: none;
   }
 }
-
