--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -44,7 +44,7 @@ button#title-menu-button {
   cursor: pointer;
   transition: all 0.5s;
   &:hover {
-    scale: 1.07;
+    scale: Theme.$scaleOnHover;
     transition: all Theme.$transitionShort;
   }
   &:active {
