Fix: Makes theme and mixin files partials.

--- a/src/app/(white)/(litters)/litter/[litterId]/layout.scss
+++ b/src/app/(white)/(litters)/litter/[litterId]/layout.scss
@@ -1,5 +1,5 @@
-@use "@styles/mixins.scss" as Mixins;
-@use "@styles/theme.module.scss" as Theme;
+@use "@styles/_mixins.scss" as Mixins;
+@use "@styles/_theme.module.scss" as Theme;
 
 .litter-currentLitter {
   display: flex;
