--- a/src/styles/construction-placeholder.scss
+++ b/src/styles/construction-placeholder.scss
@@ -1,4 +1,4 @@
-@use "@styles/theme.module.scss" as Theme;
+@use "@styles/_theme.module.scss" as Theme;
 
 p.construction-doodle {
   margin: 2rem 0;
