--- a/src/styles/attention-getter-image.module.scss
+++ b/src/styles/attention-getter-image.module.scss
@@ -1,5 +1,5 @@
-@use "@styles/theme.module.scss" as Theme;
-@use "@styles/mixins.scss" as Mixins;
+@use "@styles/_theme.module.scss" as Theme;
+@use "@styles/_mixins.scss" as Mixins;
 
 div.container {
   display: flex;
