--- a/src/styles/puppy-modal.module.scss
+++ b/src/styles/puppy-modal.module.scss
@@ -1,6 +1,6 @@
 @use "@styles/puppy.module.scss" as ParentCSS;
-@use "@styles/mixins.scss" as Mixins;
-@use "@styles/theme.module.scss" as Theme;
+@use "@styles/_mixins.scss" as Mixins;
+@use "@styles/_theme.module.scss" as Theme;
 
 .familyData {
   margin: 0;
