--- a/src/styles/tab-menu.module.scss
+++ b/src/styles/tab-menu.module.scss
@@ -1,5 +1,5 @@
-@use "@styles/mixins" as Mixins;
-@use "@styles/theme.module.scss" as Theme;
+@use "@styles/_mixins" as Mixins;
+@use "@styles/_theme.module.scss" as Theme;
 
 .container {
   width: 100%;
