--- a/src/styles/_theme.module.scss
+++ b/src/styles/_theme.module.scss
@@ -1,5 +1,3 @@
-@use "@styles/mixins.scss" as Mixins;
-
 // Colors
 $lightPrimary: #e8d8ca;
 $primary: #875122;
@@ -68,6 +66,80 @@ $h2: calc(51px - 10px);
 $h3: calc(51px - 20px);
 $h4: calc(51px - 30px);
 
+@mixin setTextValues() {
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  li,
+  th,
+  tr {
+    @content;
+  }
+}
+
+@mixin setImageValues() {
+  img,
+  svg,
+  video {
+    @content;
+  }
+}
+
+@mixin mediaQuery($breakpoint, $w: null) {
+  @if ($w) {
+    @media screen and (#{$w}-width: $breakpoint) {
+      @content;
+    }
+  } @else {
+    @media screen and (max-width: $breakpoint) {
+      @content;
+    }
+  }
+}
+
+@mixin setFlex($direction: row, $justify: center, $align: center) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+}
+
+@mixin setBoxShadow($color, $isHover: false) {
+  $x: 0px;
+  $y: 0.75rem;
+  $blur: 1rem;
+  box-shadow: $color $x $y $blur;
+
+  @if $isHover == 'hover' {
+    &:hover {
+      $y: 1.5rem;
+      $blur: 1.5rem;
+      box-shadow: $color $x $y $blur;
+    }
+  }
+}
+
+@mixin imageHover($color) {
+  @include setBoxShadow($color, 'hover');
+
+  transition-property: transform, box-shadow;
+  transition-duration: 0.2s; // $transitionShort;
+
+  &:hover {
+    transform: translateY(-0.5rem);
+  }
+}
+
+@mixin scaleOnHover($scale: 1.07) {
+  transition: transform 0.1s;
+  &:hover {
+    transform: scale($scale);
+    @content;
+  }
+}
+
 .woodgrain {
   background-size: cover;
   background-position: center;
@@ -77,7 +149,7 @@ $h4: calc(51px - 30px);
   }
 }
 
-@include Mixins.mediaQuery($tabletViewport, min) {
+@include mediaQuery($tabletViewport, min) {
   .desktopOnly {
     display: block;
   }
@@ -91,7 +163,7 @@ $h4: calc(51px - 30px);
     display: none;
   }
 }
-@include Mixins.mediaQuery($tabletViewport) {
+@include mediaQuery($tabletViewport) {
   .desktopOnly {
     display: none;
   }
@@ -105,7 +177,7 @@ $h4: calc(51px - 30px);
     display: block;
   }
 }
-@include Mixins.mediaQuery($LgPhoneViewport) {
+@include mediaQuery($LgPhoneViewport) {
   .desktopOnly {
     display: none;
   }
@@ -119,7 +191,7 @@ $h4: calc(51px - 30px);
     display: block;
   }
 }
-@include Mixins.mediaQuery($SmPhoneViewport) {
+@include mediaQuery($SmPhoneViewport) {
   .desktopOnly {
     display: none;
   }
@@ -182,3 +254,4 @@ $h4: calc(51px - 30px);
   transitionShort:$transitionShort;
   watchViewport: $watchViewport;
 }
+
