--- a/src/styles/attention-getter-image.module.scss
+++ b/src/styles/attention-getter-image.module.scss
@@ -1,5 +1,4 @@
 @use "@styles/_theme.module.scss" as Theme;
-@use "@styles/_mixins.scss" as Mixins;
 
 div.container {
   display: flex;
@@ -9,7 +8,7 @@ div.container {
     display: flex;
     flex: 1 1 0%;
   }
-  @include Mixins.mediaQuery(Theme.$tabletViewport) {
+  @include Theme.mediaQuery(Theme.$tabletViewport) {
     flex-direction: column;
   }
 }
@@ -23,7 +22,7 @@ div.container {
   display: flex;
   flex: 1 1 0%;
     //div:nth-child(3) {
-    //  @include Mixins.mediaQuery(Theme.$tabletViewport) {
+    //  @include Theme.mediaQuery(Theme.$tabletViewport) {
     //    max-width: 100%;
     //  }
     //}
@@ -32,7 +31,7 @@ div.container {
 .image {
   margin: Theme.$spaceBetweenElements;
   border-radius: 100%;
-    @include Mixins.setBoxShadow(black);
+    @include Theme.setBoxShadow(black);
   &:hover {
     scale: Theme.$scaleOnHover;
   }
@@ -42,12 +41,12 @@ div.container {
   }
   transition-property: scale, box-shadow;
   transition-duration: #{Theme.$transitionShort}s;
-  @include Mixins.mediaQuery(Theme.$tabletViewport) {
+  @include Theme.mediaQuery(Theme.$tabletViewport) {
     width: 100%;
     height:auto;
     max-width: Theme.$Headshots_Sm;
   }
-  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$SmPhoneViewport) {
     margin: 0;
     &:hover{
       scale: 1;
