--- a/src/styles/headshots.module.scss
+++ b/src/styles/headshots.module.scss
@@ -1,4 +1,3 @@
-@use "@styles/_mixins.scss" as Mixins;
 @use "@styles/_theme.module.scss" as Theme;
 
 /*Large*/
@@ -18,11 +17,11 @@
     outline: Theme.$dadOutline;
     outline-offset: -1px;
   }
-  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     width: Theme.$Headshots_Sm;
     height: auto;
   }
-  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$SmPhoneViewport) {
     width: 100%;
     height: auto;
   }
@@ -44,11 +43,11 @@
     transform: scale(0.95);
     box-shadow: none;
   }
-  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     width: Theme.$Headshots_Sm;
     height: auto;
   }
-  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$SmPhoneViewport) {
     width: 100%;
     height: auto;
     &:hover {
@@ -63,13 +62,13 @@
 .mom {
   outline: Theme.$momOutline;
   outline-offset: -1px;
-  @include Mixins.setBoxShadow(Theme.$darkMom);
+  @include Theme.setBoxShadow(Theme.$darkMom, 'hover');
 }
 
 .dad {
   outline: Theme.$dadOutline;
   outline-offset: -1px;
-  @include Mixins.setBoxShadow(Theme.$darkDad);
+  @include Theme.setBoxShadow(Theme.$darkDad, 'hover');
 }
 
 .unrecordedDog {
