--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -1,5 +1,4 @@
 @use "@styles/_theme.module.scss" as Theme;
-@use "@styles/_mixins.scss" as Mixins;
 
 // Nav{
 // Transition rules:
@@ -21,7 +20,7 @@ nav.sliderMenu {
   width: fit-content;
   padding: 0 30px 0 10px;
   contain: content;
-  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     top: auto;
     bottom: 0;
   }
@@ -51,7 +50,7 @@ button#title-menu-button {
     box-shadow: none;
     scale: 1;
   }
-  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     height: calc($menu-button-height - $mobile-view-reduction);
     font-size: calc($fontSize - $mobile-view-reduction / 2);
     border-radius: Theme.$smallButtonRadius;
