--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -90,6 +90,7 @@ $spaceBetweenLayouts: 100px;
     color: Theme.$lightPrimary;
   }
 }
+@include Theme.woodgrain();
 
 .tan-layout {
   @include all-layouts;
