--- a/src/styles/_theme.module.scss
+++ b/src/styles/_theme.module.scss
@@ -33,7 +33,9 @@ $unrecordedDogShadow: 0 0 0 calc($outlineWidth * 0.667) $lightSecondaryGreen;
 
 $black: #333;
 
+// Hover Effects
 $scaleOnHover: 1.07;
+$translateOnHover: 0.5rem;
 
 $transitionShort: 0.2;
 $transitionFancy: 0.5;
@@ -112,7 +114,7 @@ $h4: calc(51px - 30px);
   $blur: 1rem;
   box-shadow: $color $x $y $blur;
 
-  @if $isHover == 'hover' {
+  @if $isHover == "hover" {
     &:hover {
       $y: 1.5rem;
       $blur: 1.5rem;
@@ -122,17 +124,21 @@ $h4: calc(51px - 30px);
 }
 
 @mixin imageHover($color) {
-  @include setBoxShadow($color, 'hover');
+  @include setBoxShadow($color, "hover");
 
   transition-property: transform, box-shadow;
-  transition-duration: 0.2s; // $transitionShort;
+  transition-duration: $transitionShort;
 
   &:hover {
-    transform: translateY(-0.5rem);
+    transform: translateY($translateOnHover);
+  }
+  &:active {
+    transform: translateY(calc($translateOnHover + 0.3rem));
+    box-shadow: none;
   }
 }
 
-@mixin scaleOnHover($scale: 1.07) {
+@mixin scaleOnHover($scale: $scaleOnHover) {
   transition: transform 0.1s;
   &:hover {
     transform: scale($scale);
@@ -222,9 +228,9 @@ $h4: calc(51px - 30px);
   accentBlue: $accentBlue;
   bigButtonRadius: $bigButtonRadius; // 32px
   black: $black;
-  boxShadowBlur:$boxShadowBlur; // Needs to be populated in the mixin.
-  boxShadowX:$boxShadowX; // Needs to be populated in the mixin.
-  boxShadowY:$boxShadowY; // Needs to be populated in the mixin.
+  boxShadowBlur: $boxShadowBlur; // Needs to be populated in the mixin.
+  boxShadowX: $boxShadowX; // Needs to be populated in the mixin.
+  boxShadowY: $boxShadowY; // Needs to be populated in the mixin.
   buttonRadius: $buttonRadius; // 14px
   dadOutline: $dadOutline;
   dadShadow: $dadShadow;
@@ -248,14 +254,13 @@ $h4: calc(51px - 30px);
   momShadow: $momShadow;
   outlineWidth: $outlineWidth;
   primary: $primary;
-  scaleOnHover:  $scaleOnHover;
+  scaleOnHover: $scaleOnHover;
   secondaryGreen: $secondaryGreen;
   spaceBetweenElements: $spaceBetweenElements;
   tabletViewport: $tabletViewport;
   tertiaryCherry: $tertiaryCherry;
-  transitionFancy:$transitionFancy;
-  transitionShort:$transitionShort;
+  transitionFancy: $transitionFancy;
+  transitionShort: $transitionShort;
   watchViewport: $watchViewport;
   woodgrain: woodgrain();
 }
-
