--- a/src/styles/dog-about.module.scss
+++ b/src/styles/dog-about.module.scss
@@ -165,6 +165,9 @@ article.mainDog {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    img {
+      @include Theme.imageHover(black);
+    }
   }
   &Breeder {
     color: Theme.$lightPrimary;
