--- a/src/styles/breeder-line.module.scss
+++ b/src/styles/breeder-line.module.scss
@@ -1,3 +1,4 @@
+@use "@styles/_theme.module.scss" as Theme;
 .text {
   display: inline-flex;
   height: 1em;
@@ -10,7 +11,7 @@
     position: relative;
     width: 1em !important;
     height: 1em !important;
-    margin-left: .6ch;
+    margin-left: 0.6ch;
     border-radius: 100%;
   }
 }
