--- a/src/styles/dog-about.module.scss
+++ b/src/styles/dog-about.module.scss
@@ -164,7 +164,7 @@ article.mainDog {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    img {
+    img:not([class^="breeder-line"]) {
       @include Theme.imageHover(black);
     }
   }
