--- a/src/styles/GroupPhoto.module.scss
+++ b/src/styles/GroupPhoto.module.scss
@@ -2,18 +2,35 @@
 
 .groupPhoto {
   padding: 1rem;
+  margin-bottom: Theme.$spaceBetweenElements 0;
   border-radius: Theme.$buttonRadius;
   outline: 2px solid Theme.$primary;
   outline-offset: -1px;
   background-color: Theme.$primary;
   transition: all #{Theme.$transitionShort}s;
-
   @include Theme.imageHover(Theme.$darkPrimary);
-
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport){
+    width: 100%;
+    height: auto;
+  }
 }
 
 .link {
+  position: relative;
   height: fit-content;
   width: fit-content;
   display: block;
+}
+
+.no-photo {
+  position: absolute;
+  top: 85%;
+  left:0;
+  font-size: 25px;
+  color: Theme.$lightPrimary;
+  text-align: center;
+  width: 100%;
+  height: 15%;
+  background-color: transparentize(Theme.$darkPrimary, 0.05);
+  border-radius: Theme.$buttonRadius;
 }
