Fix: Adds box-shadow animations to large headshots.

--- a/src/styles/headshots.module.scss
+++ b/src/styles/headshots.module.scss
@@ -10,6 +10,8 @@
   border-radius: Theme.$bigButtonRadius;
   box-sizing: content-box;
   background-color: Theme.$primary;
+  transition-property: box-shadow;
+  transition-duration: #{Theme.$transitionShort}s;
   @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     width: Theme.$Headshots_Sm;
     height: auto;
