Style: Items in .parentData getting bunched together too much.

--- a/src/styles/dog-about.module.scss
+++ b/src/styles/dog-about.module.scss
@@ -148,6 +148,10 @@ article.mainDog {
     color: Theme.$lightSecondaryGreen;
     max-width: 600px;
     margin-bottom: Theme.$spaceBetweenElements;
+    margin-right: Theme.$spaceBetweenElements;
+    @include Theme.mediaQuery(Theme.$tabletViewport) {
+      margin-right: revert;
+    }
     @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
       align-items: center;
       justify-content: center;
