--- a/src/styles/puppifications.module.scss
+++ b/src/styles/puppifications.module.scss
@@ -84,9 +84,10 @@ $componentHeight: 350px;
   }
   button.button[type="submit"] {
     flex: 1;
-    padding: 1em 1.5em;
+    padding: 0 1em;
     height: max-content;
     font-weight: 700;
+    font-size: 2rem;
   }
   @include Theme.mediaQuery(Theme.$microViewport) {
     flex-direction: column;
