Style: Puppification component optimizations for small screens.

--- a/src/styles/puppifications.module.scss
+++ b/src/styles/puppifications.module.scss
@@ -8,7 +8,7 @@ $componentHeight: 350px;
 
 .iris {
   display: flex;
-  padding: 1em;
+  padding: 1em 0;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -31,7 +31,7 @@ $componentHeight: 350px;
 
 .button {
   padding: 1em;
-  margin: 1em;
+  margin: 1rem;
   border: none;
   border-radius: Theme.$buttonRadius;
   width: 100%;
@@ -56,7 +56,12 @@ $componentHeight: 350px;
   justify-content: center;
   position: relative;
   font-family: inherit;
+  font-size: Theme.$h3;
   text-align: center;
+}
+
+.envelope-doodle {
+  margin-top: 1em;
 }
 
 .puppifications {
@@ -100,5 +105,20 @@ $componentHeight: 350px;
       flex: 1;
       width: 100%;
     }
+  }
+}
+
+@include Theme.mediaQuery(Theme.$microViewport) {
+  .envelope-doodle {
+    display: none;
+  }
+  .button,
+  .form input,
+  .form span {
+    font-size: 1rem !important;
+    line-height: 2rem;
+  }
+  .top-line {
+    display: none;
   }
 }
