--- a/src/styles/puppifications.module.scss
+++ b/src/styles/puppifications.module.scss
@@ -31,7 +31,7 @@ $componentHeight: 350px;
 
 .button {
   padding: 1em;
-  margin: 1rem;
+  margin: 2rem 1rem;
   border: none;
   border-radius: Theme.$buttonRadius;
   width: 100%;
@@ -40,14 +40,7 @@ $componentHeight: 350px;
   background-color: Theme.$primary;
   color: Theme.$lightPrimary;
   transition: all #{Theme.$transitionShort}s;
-  @include Theme.setBoxShadow(Theme.$darkPrimary);
-  &:hover {
-    transform: translateY(0.3rem);
-  }
-  &:active {
-    transform: translateY(0.4rem);
-    box-shadow: none;
-  }
+  @include Theme.imageHover(Theme.$darkPrimary);
 }
 
 .top-line {
@@ -81,7 +74,7 @@ $componentHeight: 350px;
   input {
     flex: 4;
     padding: 1em;
-    margin: 0;
+    margin: 0 1em;
     border: none;
     border-radius: Theme.$buttonRadius;
     background-color: white;
