--- a/src/styles/GroupPhoto.module.scss
+++ b/src/styles/GroupPhoto.module.scss
@@ -7,6 +7,7 @@
   outline: 2px solid Theme.$darkPrimary;
   outline-offset: -1px;
   background-color: Theme.$darkPrimary;
+
   transition: all #{Theme.$transitionShort}s;
   @include Theme.imageHover(Theme.$darkPrimary);
   @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
@@ -14,6 +15,8 @@
     height: auto;
   }
 }
+
+@include Theme.woodgrain($wide: true);
 
 .link {
   position: relative;
