--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -2,15 +2,16 @@
 
 .adoptionBanner {
   width: 100%;
+  height: 100%;
   // Configure most rules from this class
-  button.eventHandlerDiv {
+  button.eventHandlerDiv,
+  .closed-content {
     font: inherit;
     overflow: hidden;
     border: none;
     background-color: Theme.$lightSecondaryGreen;
     border-radius: calc(Theme.$buttonRadius + 10px);
-    width: fit-content;
-  width: 100%;
+    width: 100%;
     cursor: pointer;
     padding: Theme.$spaceBetweenElements;
     display: flex;
@@ -26,7 +27,7 @@
       text-align: center;
       font-size: 6.4rem;
       text-decoration: none;
-      @include Theme.mediaQuery(Theme.$tabletViewport){
+      @include Theme.mediaQuery(Theme.$tabletViewport) {
         font-size: 4rem;
       }
       @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
@@ -43,6 +44,9 @@
       height: $dimensions;
       width: $dimensions;
     }
+  }
+  .closed-content {
+    box-shadow: none;
   }
   @include Theme.mediaQuery(Theme.$microViewport) {
     .eventHandlerDiv {
